--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMu2REbfzzKZtdxfk9IOvNb",
+      "authorship_tag": "ABX9TyMesnDPnHZV5ay/gVG84D2i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "0okkjS6imtMS"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -167,7 +167,7 @@
         "id": "u2ACRTABnNin"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -252,7 +252,7 @@
         "id": "AiFmztPNJDwj"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -314,7 +314,7 @@
         "id": "m1u7WhDBSxFg"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -460,45 +460,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XBwFALCMoGTx"
-      },
-      "source": [
-        "def max_diagonal(arr):\n",
-        "    \n",
-        "    def permutation(arr, shift, end):\n",
-        "        arr = np.insert(arr, end, arr[shift], axis=0)\n",
-        "        finale = shift + 1 if shift > end else shift \n",
-        "        arr = np.delete(arr, finale, axis=0)\n",
-        "        return arr \n",
-        "\n",
-        "    for i in range(len(arr)):\n",
-        "        arr = permutation(\n",
-        "            arr,\n",
-        "            np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
-        "            i\n",
-        "        )\n",
-        "    return arr\n",
-        "\n",
-        "arr = max_diagonal(arr)\n",
-        "\n",
-        "for cm in reversed(range(len(arr[0])-2)): # coluna da linha da matriz\n",
-        "    for l in reversed(range(len(arr)-1-cm)): # linha\n",
-        "        for c in reversed(range(len(arr[0]))): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
-        "            print(v1, v2)\n",
-        "        print()\n",
-        "            # ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
-        "            # arr[l+cm+1][c] = ms\n",
-        "    print()\n",
-        "    arr = max_diagonal(arr)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ToU4pVdgcUKL"
       },
       "source": [
@@ -506,13 +467,13 @@
         "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]]\n",
         "arr = np.array(matriz)"
       ],
-      "execution_count": 570,
+      "execution_count": 595,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YUXZu7mcXFVz"
+        "id": "b_1FmaMuwEWZ"
       },
       "source": [
         "for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
@@ -520,19 +481,20 @@
         "        for c in range(len(arr[0])): # coluna da linha\n",
         "            if not c:\n",
         "                v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
-        "            \n",
-        "            print(f'{arr[cm+k+1][c]}', end=' = ')\n",
-        "            print(f'{v1} * {arr[cm+k+1][c]} - {v2} * {arr[cm][c]}', end=' = ')\n",
-        "            print(v1*arr[cm+k+1][c]-v2*arr[cm][c], end='     ')\n",
-        "            print(cm, l, k, c)\n",
         "            arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
-        "        print()\n",
-        "        print(arr)\n",
-        "        print()\n",
-        "    print('\\033[31m-'*25,'\\033[\\n')"
+        "    arr = max_diagonal(arr)"
       ],
-      "execution_count": null,
+      "execution_count": 594,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uk8Ydkez_s7B"
+      },
+      "source": [
+        "# none"
+      ]
     },
     {
       "cell_type": "code",
@@ -540,33 +502,102 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "b_1FmaMuwEWZ",
-        "outputId": "7c2e21fb-c34b-452d-b68d-aa323bf3ecb5"
+        "id": "YFSzDNdU_eWh",
+        "outputId": "5fbf1da8-fb6f-4c1a-8a15-d474b072cdfb"
       },
       "source": [
-        "for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
-        "    for l, k in zip(range(cm, len(arr)-1), range(len(arr))): # linha\n",
-        "        for c in range(len(arr[0])): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
-        "            arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
-        "    arr = max_diagonal(arr)\n",
+        "arr = eliminacao_gauss(arr)\n",
         "arr"
       ],
-      "execution_count": 571,
+      "execution_count": 621,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[  2,   1,   1,   1,   1],\n",
-              "       [  0,   3,   1,   1,   3],\n",
-              "       [  0,   0,   8,   2,  12],\n",
-              "       [  0,   0,   0,  60, 120]])"
+              "array([[     2,      1,      1,      1,      1],\n",
+              "       [     0,      6,      2,      2,      6],\n",
+              "       [     0,      0,     96,     24,    144],\n",
+              "       [     0,      0,      0,  69120, 138240]])"
             ]
           },
           "metadata": {},
-          "execution_count": 571
+          "execution_count": 621
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YUXZu7mcXFVz",
+        "outputId": "b2a359a0-cea6-41d3-d8b6-92961e0140ce"
+      },
+      "source": [
+        "for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
+        "    for l, k in zip(reversed(range(cm)), range(len(arr))): # linha\n",
+        "        for c in range(len(arr[0])): # coluna da linha\n",
+        "            # if not c:\n",
+        "            #     v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
+        "            \n",
+        "            print(f'{arr[cm][c]}', end='      ')\n",
+        "            #print(f'{v1} * {arr[cm+k+1][c]} - {v2} * {arr[cm][c]}', end=' = ')\n",
+        "            #print(v1*arr[cm+k+1][c]-v2*arr[cm][c], end='     ')\n",
+        "            print(cm, l, k, c)\n",
+        "        print()\n",
+        "    print('\\033[31m-'*25,'\\033[\\n')"
+      ],
+      "execution_count": 619,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1      3 2 0 0\n",
+            "1      3 2 0 1\n",
+            "1      3 2 0 2\n",
+            "2      3 2 0 3\n",
+            "4      3 2 0 4\n",
+            "\n",
+            "1      3 1 1 0\n",
+            "1      3 1 1 1\n",
+            "1      3 1 1 2\n",
+            "2      3 1 1 3\n",
+            "4      3 1 1 4\n",
+            "\n",
+            "1      3 0 2 0\n",
+            "1      3 0 2 1\n",
+            "1      3 0 2 2\n",
+            "2      3 0 2 3\n",
+            "4      3 0 2 4\n",
+            "\n",
+            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
+            "\n",
+            "1      2 1 0 0\n",
+            "1      2 1 0 1\n",
+            "2      2 1 0 2\n",
+            "1      2 1 0 3\n",
+            "3      2 1 0 4\n",
+            "\n",
+            "1      2 0 1 0\n",
+            "1      2 0 1 1\n",
+            "2      2 0 1 2\n",
+            "1      2 0 1 3\n",
+            "3      2 0 1 4\n",
+            "\n",
+            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
+            "\n",
+            "1      1 0 0 0\n",
+            "2      1 0 0 1\n",
+            "1      1 0 0 2\n",
+            "1      1 0 0 3\n",
+            "2      1 0 0 4\n",
+            "\n",
+            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
+            "\n"
+          ]
         }
       ]
     },
