--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -5,8 +5,14 @@
     "colab": {
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMesnDPnHZV5ay/gVG84D2i",
+      "collapsed_sections": [
+        "0okkjS6imtMS",
+        "u2ACRTABnNin",
+        "AiFmztPNJDwj",
+        "m1u7WhDBSxFg",
+        "7jr4NM4XqDGO"
+      ],
+      "authorship_tag": "ABX9TyPLGpI9IAtfPQJG7JN0eqRH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,27 +508,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "id": "YFSzDNdU_eWh",
-        "outputId": "5fbf1da8-fb6f-4c1a-8a15-d474b072cdfb"
+        "outputId": "b7fb679f-ed81-4546-f139-56628c99bc3f"
       },
       "source": [
+        "import numpy as np\n",
+        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "arr = np.array(matriz)\n",
+        "\n",
         "arr = eliminacao_gauss(arr)\n",
         "arr"
       ],
-      "execution_count": 621,
+      "execution_count": 635,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[     2,      1,      1,      1,      1],\n",
-              "       [     0,      6,      2,      2,      6],\n",
-              "       [     0,      0,     96,     24,    144],\n",
-              "       [     0,      0,      0,  69120, 138240]])"
+              "array([[  2,   1,   1,   1,   1],\n",
+              "       [  0,   3,   1,   1,   3],\n",
+              "       [  0,   0,   8,   2,  12],\n",
+              "       [  0,   0,   0,  60, 120]])"
             ]
           },
           "metadata": {},
-          "execution_count": 621
+          "execution_count": 635
         }
       ]
     },
@@ -533,67 +544,67 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUXZu7mcXFVz",
-        "outputId": "b2a359a0-cea6-41d3-d8b6-92961e0140ce"
+        "outputId": "e0f0ccb2-e267-4238-8777-56540418ceb6"
       },
       "source": [
         "for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
-        "    for l, k in zip(reversed(range(cm)), range(len(arr))): # linha\n",
+        "    for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
         "        for c in range(len(arr[0])): # coluna da linha\n",
-        "            # if not c:\n",
-        "            #     v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
+        "            if not c:\n",
+        "                v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
         "            \n",
-        "            print(f'{arr[cm][c]}', end='      ')\n",
-        "            #print(f'{v1} * {arr[cm+k+1][c]} - {v2} * {arr[cm][c]}', end=' = ')\n",
-        "            #print(v1*arr[cm+k+1][c]-v2*arr[cm][c], end='     ')\n",
+        "            print(f'{arr[cm-k][c]}'.ljust(2), end=' = ')\n",
+        "            print(f'{v1} * {arr[cm-k][c]} - {v2} * {arr[cm][c]}'.ljust(17), end=' = ')\n",
+        "            print(f'{v1*arr[cm-k][c]-v2*arr[cm][c]}'.ljust(7), end='     ')\n",
         "            print(cm, l, k, c)\n",
         "        print()\n",
         "    print('\\033[31m-'*25,'\\033[\\n')"
       ],
-      "execution_count": 619,
+      "execution_count": 677,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1      3 2 0 0\n",
-            "1      3 2 0 1\n",
-            "1      3 2 0 2\n",
-            "2      3 2 0 3\n",
-            "4      3 2 0 4\n",
+            "0  = 60 * 0 - 2 * 0    = 0           3 2 1 0\n",
+            "0  = 60 * 0 - 2 * 0    = 0           3 2 1 1\n",
+            "8  = 60 * 8 - 2 * 0    = 480         3 2 1 2\n",
+            "2  = 60 * 2 - 2 * 60   = 0           3 2 1 3\n",
+            "12 = 60 * 12 - 2 * 120 = 480         3 2 1 4\n",
             "\n",
-            "1      3 1 1 0\n",
-            "1      3 1 1 1\n",
-            "1      3 1 1 2\n",
-            "2      3 1 1 3\n",
-            "4      3 1 1 4\n",
+            "0  = 60 * 0 - 1 * 0    = 0           3 1 2 0\n",
+            "3  = 60 * 3 - 1 * 0    = 180         3 1 2 1\n",
+            "1  = 60 * 1 - 1 * 0    = 60          3 1 2 2\n",
+            "1  = 60 * 1 - 1 * 60   = 0           3 1 2 3\n",
+            "3  = 60 * 3 - 1 * 120  = 60          3 1 2 4\n",
             "\n",
-            "1      3 0 2 0\n",
-            "1      3 0 2 1\n",
-            "1      3 0 2 2\n",
-            "2      3 0 2 3\n",
-            "4      3 0 2 4\n",
-            "\n",
-            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
-            "\n",
-            "1      2 1 0 0\n",
-            "1      2 1 0 1\n",
-            "2      2 1 0 2\n",
-            "1      2 1 0 3\n",
-            "3      2 1 0 4\n",
-            "\n",
-            "1      2 0 1 0\n",
-            "1      2 0 1 1\n",
-            "2      2 0 1 2\n",
-            "1      2 0 1 3\n",
-            "3      2 0 1 4\n",
+            "2  = 60 * 2 - 1 * 0    = 120         3 0 3 0\n",
+            "1  = 60 * 1 - 1 * 0    = 60          3 0 3 1\n",
+            "1  = 60 * 1 - 1 * 0    = 60          3 0 3 2\n",
+            "1  = 60 * 1 - 1 * 60   = 0           3 0 3 3\n",
+            "1  = 60 * 1 - 1 * 120  = -60         3 0 3 4\n",
             "\n",
             "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
             "\n",
-            "1      1 0 0 0\n",
-            "2      1 0 0 1\n",
-            "1      1 0 0 2\n",
-            "1      1 0 0 3\n",
-            "2      1 0 0 4\n",
+            "0  = 8 * 0 - 1 * 0     = 0           2 1 1 0\n",
+            "3  = 8 * 3 - 1 * 0     = 24          2 1 1 1\n",
+            "1  = 8 * 1 - 1 * 8     = 0           2 1 1 2\n",
+            "1  = 8 * 1 - 1 * 2     = 6           2 1 1 3\n",
+            "3  = 8 * 3 - 1 * 12    = 12          2 1 1 4\n",
+            "\n",
+            "2  = 8 * 2 - 1 * 0     = 16          2 0 2 0\n",
+            "1  = 8 * 1 - 1 * 0     = 8           2 0 2 1\n",
+            "1  = 8 * 1 - 1 * 8     = 0           2 0 2 2\n",
+            "1  = 8 * 1 - 1 * 2     = 6           2 0 2 3\n",
+            "1  = 8 * 1 - 1 * 12    = -4          2 0 2 4\n",
+            "\n",
+            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
+            "\n",
+            "2  = 3 * 2 - 1 * 0     = 6           1 0 1 0\n",
+            "1  = 3 * 1 - 1 * 3     = 0           1 0 1 1\n",
+            "1  = 3 * 1 - 1 * 1     = 2           1 0 1 2\n",
+            "1  = 3 * 1 - 1 * 1     = 2           1 0 1 3\n",
+            "1  = 3 * 1 - 1 * 3     = 0           1 0 1 4\n",
             "\n",
             "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
             "\n"
