--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -9,10 +9,9 @@
         "0okkjS6imtMS",
         "u2ACRTABnNin",
         "AiFmztPNJDwj",
-        "m1u7WhDBSxFg",
         "7jr4NM4XqDGO"
       ],
-      "authorship_tag": "ABX9TyPLGpI9IAtfPQJG7JN0eqRH",
+      "authorship_tag": "ABX9TyMTfw+Ps2Y6ldKgzH4niHZR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,45 +350,21 @@
         "        else:\n",
         "            break\n",
         "\n",
-        "    '''\n",
-        "    import numpy as np\n",
-        "    \n",
-        "    arr = np.array(hea, copy=True)\n",
-        "    \n",
-        "    def max_diagonal(arr):\n",
-        "        \n",
-        "        def permutation(arr, shift, end):\n",
-        "            arr = np.insert(arr, end, arr[shift], axis=0)\n",
-        "            finale = shift + 1 if shift > end else shift \n",
-        "            arr = np.delete(arr, finale, axis=0)\n",
-        "            return arr \n",
-        "\n",
-        "        for i in range(len(arr)):\n",
-        "            arr = permutation(\n",
-        "                arr,\n",
-        "                np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
-        "                i\n",
-        "            )\n",
-        "        return arr\n",
-        "\n",
-        "    arr = max_diagonal(arr)\n",
-        "\n",
-        "    for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
-        "        for l in range(len(arr)-1-cm): # linha\n",
+        "    for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
+        "        for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
         "            for c in range(len(arr[0])): # coluna da linha\n",
         "                if not c:\n",
-        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
+        "                    v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
         "\n",
-        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
+        "                arr[cm-k][c] = v1*arr[cm-k][c]-v2*arr[cm][c]\n",
         "\n",
-        "                arr[l+cm+1][c] = ms\n",
-        "\n",
-        "        arr = max_diagonal(arr)\n",
-        "    return arr\n",
-        "print(gauss_jordan(m2))\n",
-        "    '''"
+        "    diag = arr.diagonal()\n",
+        "    for i, x in zip(range(len(diag)), diag):\n",
+        "        arr[i] = arr[i]/x\n",
+        "    \n",
+        "    return arr"
       ],
-      "execution_count": 552,
+      "execution_count": 708,
       "outputs": []
     },
     {
@@ -400,7 +375,7 @@
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
-        "outputId": "5e7ed693-45cd-4250-c10d-fc085fca3f13"
+        "outputId": "e38cc30d-36b6-465d-c082-08608e1eead9"
       },
       "source": [
         "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
@@ -408,7 +383,7 @@
         "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
         "print(f'\\033[32m{arr}')"
       ],
-      "execution_count": 579,
+      "execution_count": 709,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,6 +396,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wvcaOLF7IeEF"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -510,7 +496,7 @@
         },
         "cellView": "form",
         "id": "YFSzDNdU_eWh",
-        "outputId": "b7fb679f-ed81-4546-f139-56628c99bc3f"
+        "outputId": "ea37b819-20b3-418d-9ad5-e12102d0fb50"
       },
       "source": [
         "import numpy as np\n",
@@ -520,7 +506,7 @@
         "arr = eliminacao_gauss(arr)\n",
         "arr"
       ],
-      "execution_count": 635,
+      "execution_count": 706,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +519,47 @@
             ]
           },
           "metadata": {},
-          "execution_count": 635
+          "execution_count": 706
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HdFM1FISE3T8",
+        "outputId": "2148cdaf-6a1a-4a3f-f2ff-680ae3552567"
+      },
+      "source": [
+        "for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
+        "    for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
+        "        for c in range(len(arr[0])): # coluna da linha\n",
+        "            if not c:\n",
+        "                v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
+        "\n",
+        "            arr[cm-k][c] = v1*arr[cm-k][c]-v2*arr[cm][c]\n",
+        "\n",
+        "diag = arr.diagonal()\n",
+        "for i, x in zip(range(len(diag)), diag):\n",
+        "    arr[i] = arr[i]/x\n",
+        "arr"
+      ],
+      "execution_count": 707,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  0,  0,  0, -1],\n",
+              "       [ 0,  1,  0,  0,  0],\n",
+              "       [ 0,  0,  1,  0,  1],\n",
+              "       [ 0,  0,  0,  1,  2]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 707
         }
       ]
     },
