--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -11,7 +11,7 @@
         "AiFmztPNJDwj",
         "7jr4NM4XqDGO"
       ],
-      "authorship_tag": "ABX9TyMTfw+Ps2Y6ldKgzH4niHZR",
+      "authorship_tag": "ABX9TyNnH9JGvIhlmDed9hNxKOsn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,7 +364,7 @@
         "    \n",
         "    return arr"
       ],
-      "execution_count": 708,
+      "execution_count": 714,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
-        "outputId": "e38cc30d-36b6-465d-c082-08608e1eead9"
+        "outputId": "9890ec6b-4eb3-410f-a91d-b3edeba8d660"
       },
       "source": [
         "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
@@ -383,7 +383,7 @@
         "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
         "print(f'\\033[32m{arr}')"
       ],
-      "execution_count": 709,
+      "execution_count": 715,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,153 +400,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wvcaOLF7IeEF"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ldhc05ox5lSJ",
-        "outputId": "3dd919c2-44ed-4c90-95d1-70fb244ace6a"
+        "id": "wvcaOLF7IeEF",
+        "outputId": "4de152c4-56b1-44ba-c14c-89633723c343"
       },
       "source": [
-        "import numpy as np\n",
-        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]]\n",
-        "arr = np.array(matriz)\n",
-        "\n",
-        "for _ in range(2): \n",
-        "    bl = []\n",
-        "    for i, k in zip(arr, range(len(arr))):\n",
-        "        if not k-1 < 0:\n",
-        "            bl.append([i[x] for x in range(k)])\n",
-        "    bl = np.hstack(bl)\n",
-        "\n",
-        "    if len(np.where(bl > 0)[0]) != 0:\n",
-        "        arr = eliminacao_gauss(arr)\n",
-        "    else:\n",
-        "        break\n",
-        "print(f'\\033[32m{arr}\\033[')"
+        "gauss_jordan(arr)"
       ],
-      "execution_count": 578,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[32m[[  2   1   1   1   1]\n",
-            " [  0   3   1   1   3]\n",
-            " [  0   0   8   2  12]\n",
-            " [  0   0   0  60 120]]\u001b[\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ToU4pVdgcUKL"
-      },
-      "source": [
-        "import numpy as np\n",
-        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]]\n",
-        "arr = np.array(matriz)"
-      ],
-      "execution_count": 595,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "b_1FmaMuwEWZ"
-      },
-      "source": [
-        "for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
-        "    for l, k in zip(range(cm, len(arr)-1), range(len(arr))): # linha\n",
-        "        for c in range(len(arr[0])): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
-        "            arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
-        "    arr = max_diagonal(arr)"
-      ],
-      "execution_count": 594,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uk8Ydkez_s7B"
-      },
-      "source": [
-        "# none"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "cellView": "form",
-        "id": "YFSzDNdU_eWh",
-        "outputId": "ea37b819-20b3-418d-9ad5-e12102d0fb50"
-      },
-      "source": [
-        "import numpy as np\n",
-        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
-        "arr = np.array(matriz)\n",
-        "\n",
-        "arr = eliminacao_gauss(arr)\n",
-        "arr"
-      ],
-      "execution_count": 706,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[  2,   1,   1,   1,   1],\n",
-              "       [  0,   3,   1,   1,   3],\n",
-              "       [  0,   0,   8,   2,  12],\n",
-              "       [  0,   0,   0,  60, 120]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 706
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HdFM1FISE3T8",
-        "outputId": "2148cdaf-6a1a-4a3f-f2ff-680ae3552567"
-      },
-      "source": [
-        "for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
-        "    for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
-        "        for c in range(len(arr[0])): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
-        "\n",
-        "            arr[cm-k][c] = v1*arr[cm-k][c]-v2*arr[cm][c]\n",
-        "\n",
-        "diag = arr.diagonal()\n",
-        "for i, x in zip(range(len(diag)), diag):\n",
-        "    arr[i] = arr[i]/x\n",
-        "arr"
-      ],
-      "execution_count": 707,
+      "execution_count": 716,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,82 +422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 707
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YUXZu7mcXFVz",
-        "outputId": "e0f0ccb2-e267-4238-8777-56540418ceb6"
-      },
-      "source": [
-        "for cm in reversed(range(1, len(arr[0])-1)): # coluna da linha da matriz\n",
-        "    for l, k in zip(reversed(range(cm)), range(1, len(arr))): # linha\n",
-        "        for c in range(len(arr[0])): # coluna da linha\n",
-        "            if not c:\n",
-        "                v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
-        "            \n",
-        "            print(f'{arr[cm-k][c]}'.ljust(2), end=' = ')\n",
-        "            print(f'{v1} * {arr[cm-k][c]} - {v2} * {arr[cm][c]}'.ljust(17), end=' = ')\n",
-        "            print(f'{v1*arr[cm-k][c]-v2*arr[cm][c]}'.ljust(7), end='     ')\n",
-        "            print(cm, l, k, c)\n",
-        "        print()\n",
-        "    print('\\033[31m-'*25,'\\033[\\n')"
-      ],
-      "execution_count": 677,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0  = 60 * 0 - 2 * 0    = 0           3 2 1 0\n",
-            "0  = 60 * 0 - 2 * 0    = 0           3 2 1 1\n",
-            "8  = 60 * 8 - 2 * 0    = 480         3 2 1 2\n",
-            "2  = 60 * 2 - 2 * 60   = 0           3 2 1 3\n",
-            "12 = 60 * 12 - 2 * 120 = 480         3 2 1 4\n",
-            "\n",
-            "0  = 60 * 0 - 1 * 0    = 0           3 1 2 0\n",
-            "3  = 60 * 3 - 1 * 0    = 180         3 1 2 1\n",
-            "1  = 60 * 1 - 1 * 0    = 60          3 1 2 2\n",
-            "1  = 60 * 1 - 1 * 60   = 0           3 1 2 3\n",
-            "3  = 60 * 3 - 1 * 120  = 60          3 1 2 4\n",
-            "\n",
-            "2  = 60 * 2 - 1 * 0    = 120         3 0 3 0\n",
-            "1  = 60 * 1 - 1 * 0    = 60          3 0 3 1\n",
-            "1  = 60 * 1 - 1 * 0    = 60          3 0 3 2\n",
-            "1  = 60 * 1 - 1 * 60   = 0           3 0 3 3\n",
-            "1  = 60 * 1 - 1 * 120  = -60         3 0 3 4\n",
-            "\n",
-            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
-            "\n",
-            "0  = 8 * 0 - 1 * 0     = 0           2 1 1 0\n",
-            "3  = 8 * 3 - 1 * 0     = 24          2 1 1 1\n",
-            "1  = 8 * 1 - 1 * 8     = 0           2 1 1 2\n",
-            "1  = 8 * 1 - 1 * 2     = 6           2 1 1 3\n",
-            "3  = 8 * 3 - 1 * 12    = 12          2 1 1 4\n",
-            "\n",
-            "2  = 8 * 2 - 1 * 0     = 16          2 0 2 0\n",
-            "1  = 8 * 1 - 1 * 0     = 8           2 0 2 1\n",
-            "1  = 8 * 1 - 1 * 8     = 0           2 0 2 2\n",
-            "1  = 8 * 1 - 1 * 2     = 6           2 0 2 3\n",
-            "1  = 8 * 1 - 1 * 12    = -4          2 0 2 4\n",
-            "\n",
-            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
-            "\n",
-            "2  = 3 * 2 - 1 * 0     = 6           1 0 1 0\n",
-            "1  = 3 * 1 - 1 * 3     = 0           1 0 1 1\n",
-            "1  = 3 * 1 - 1 * 1     = 2           1 0 1 2\n",
-            "1  = 3 * 1 - 1 * 1     = 2           1 0 1 3\n",
-            "1  = 3 * 1 - 1 * 3     = 0           1 0 1 4\n",
-            "\n",
-            "\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m-\u001b[31m- \u001b[\n",
-            "\n"
-          ]
+          "execution_count": 716
         }
       ]
     },
