--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,12 +6,9 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "0okkjS6imtMS",
-        "u2ACRTABnNin",
-        "AiFmztPNJDwj",
-        "7jr4NM4XqDGO"
+        "0okkjS6imtMS"
       ],
-      "authorship_tag": "ABX9TyNnH9JGvIhlmDed9hNxKOsn",
+      "authorship_tag": "ABX9TyO4Gj123mTQkPFWIfkVjtRR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,7 +215,7 @@
         "\n",
         "    return arr        "
       ],
-      "execution_count": 574,
+      "execution_count": 723,
       "outputs": []
     },
     {
@@ -227,17 +224,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "8ZSab6ZEJfKR",
-        "outputId": "8dc7b53b-3b17-43ce-f109-68a8e7d8ff3f"
+        "cellView": "form",
+        "outputId": "fc44ab1e-cb74-4517-d7ee-cfa5b69d5f45"
       },
       "source": [
-        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
-        "#@markdown > $\\color{gray}{\\text{Matriz_Triangulada}}$\n",
-        "Matriz_Triangulada = eliminacao_gauss(Matriz_para_Triangular)\n",
-        "print(f'\\033[32m{Matriz_Triangulada}')"
+        "matriz_para_triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "#@markdown > $\\color{gray}{\\text{eliminacao_gauss(matriz_para_triangular)}}$\n",
+        "matriz_triangulada = eliminacao_gauss(matriz_para_triangular)\n",
+        "print(f'\\033[32m{matriz_triangulada}')"
       ],
-      "execution_count": 575,
+      "execution_count": 724,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +264,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # $\\color{Turquoise}{\\text{Mostrando resultados de uma matriz triângular}}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss}}$\n",
         "#@markdown > $\\color{gray}{\\text{resultado}}$\n",
         "\n",
         "def resultado(hea):\n",
@@ -285,7 +282,7 @@
         "\n",
         "    return mt"
       ],
-      "execution_count": 577,
+      "execution_count": 725,
       "outputs": []
     },
     {
@@ -294,21 +291,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "zeiJmNBSKGNB",
-        "outputId": "8654e71d-fad6-4eff-b3cf-b4c572291532"
+        "cellView": "form",
+        "outputId": "d5361610-50c2-40e0-c8ec-65a1e704f852"
       },
       "source": [
-        "Matriz_Resultados =  Matriz_Triangulada#@param\n",
-        "print(f'\\033[32mM\\u1D40 = {resultado(Matriz_Resultados)}')"
+        "matriz_resultados =  matriz_triangulada#@param\n",
+        "#@markdown > $\\color{gray}{\\text{resultado(matriz_resultados)}}$\n",
+        "print(f'\\033[32mM\\u1D40 = {resultado(matriz_resultados)}')"
       ],
-      "execution_count": 551,
+      "execution_count": 726,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32mMᵀ = [-1.0, -0.0, 1.0, 2.0]\n"
+            "\u001b[32mMᵀ = [-1.0, 0.0, 1.0, 2.0]\n"
           ]
         }
       ]
@@ -364,7 +362,7 @@
         "    \n",
         "    return arr"
       ],
-      "execution_count": 714,
+      "execution_count": 727,
       "outputs": []
     },
     {
@@ -375,54 +373,25 @@
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
-        "outputId": "9890ec6b-4eb3-410f-a91d-b3edeba8d660"
+        "outputId": "677ffa7c-8bf8-4033-ec69-2124ee472041"
       },
       "source": [
-        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
-        "#@markdown > $\\color{gray}{\\text{arr}}$\n",
-        "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
+        "matriz_para_triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "#@markdown > $\\color{gray}{\\text{gauss_jordan(matriz_para_triangular)}}$\n",
+        "arr = gauss_jordan(matriz_para_triangular)\n",
         "print(f'\\033[32m{arr}')"
       ],
-      "execution_count": 715,
+      "execution_count": 729,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32m[[  2   1   1   1   1]\n",
-            " [  0   3   1   1   3]\n",
-            " [  0   0   8   2  12]\n",
-            " [  0   0   0  60 120]]\n"
+            "\u001b[32m[[ 1  0  0  0 -1]\n",
+            " [ 0  1  0  0  0]\n",
+            " [ 0  0  1  0  1]\n",
+            " [ 0  0  0  1  2]]\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wvcaOLF7IeEF",
-        "outputId": "4de152c4-56b1-44ba-c14c-89633723c343"
-      },
-      "source": [
-        "gauss_jordan(arr)"
-      ],
-      "execution_count": 716,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 1,  0,  0,  0, -1],\n",
-              "       [ 0,  1,  0,  0,  0],\n",
-              "       [ 0,  0,  1,  0,  1],\n",
-              "       [ 0,  0,  0,  1,  2]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 716
         }
       ]
     },
