--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "0okkjS6imtMS"
       ],
-      "authorship_tag": "ABX9TyO4Gj123mTQkPFWIfkVjtRR",
+      "authorship_tag": "ABX9TyPNZxh2deC5rByFrrSkbDp6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 545,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -116,17 +116,18 @@
       "metadata": {
         "id": "CKA5oT9it4a9",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "cellView": "form",
-        "outputId": "bef9571e-180a-4b14-d6f9-cfc17f221b79"
+        "outputId": "a3209da9-0b08-4bd1-fdff-775316b71657"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
         "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": 546,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,17 +143,18 @@
       "metadata": {
         "id": "yN69942r1Zds",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "cellView": "form",
-        "outputId": "95da2adb-6921-49ad-be1b-038e7beeebd8"
+        "outputId": "0fe97a9e-67de-4c84-ce28-b02eab27c875"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
         "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 547,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,13 +181,13 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # $\\color{Turquoise}{\\text{Método de eliminação gaussiana}}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss}}$\n",
         "#@markdown > $\\color{gray}{\\text{eliminacao_gauss}}$\n",
         "\n",
         "def eliminacao_gauss(hea):\n",
         "    import numpy as np\n",
         "    \n",
-        "    arr = np.array(hea, copy=True)\n",
+        "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
         "    \n",
         "    def max_diagonal(arr):\n",
         "        \n",
@@ -215,35 +217,39 @@
         "\n",
         "    return arr        "
       ],
-      "execution_count": 723,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "8ZSab6ZEJfKR",
         "cellView": "form",
-        "outputId": "fc44ab1e-cb74-4517-d7ee-cfa5b69d5f45"
+        "outputId": "c445ce2d-f896-4fb3-d106-7d3129ec45db"
       },
       "source": [
-        "matriz_para_triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "matriz_para_triangular = [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]] #@param\n",
         "#@markdown > $\\color{gray}{\\text{eliminacao_gauss(matriz_para_triangular)}}$\n",
         "matriz_triangulada = eliminacao_gauss(matriz_para_triangular)\n",
-        "print(f'\\033[32m{matriz_triangulada}')"
+        "print(f'\\033[32m{matriz_triangulada}'); print()\n",
+        "%timeit eliminacao_gauss(matriz_para_triangular)"
       ],
-      "execution_count": 724,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32m[[  2   1   1   1   1]\n",
-            " [  0   3   1   1   3]\n",
-            " [  0   0   8   2  12]\n",
-            " [  0   0   0  60 120]]\n"
+            "\u001b[32m[[ 3.0000e+00  2.0000e+00  1.0000e+00 -1.0000e+00  5.0000e+00]\n",
+            " [ 0.0000e+00 -9.0000e+00 -1.5000e+01  2.1000e+01  2.1000e+01]\n",
+            " [-0.0000e+00  0.0000e+00  4.5000e+01 -1.4400e+02 -2.2500e+02]\n",
+            " [-0.0000e+00  0.0000e+00  0.0000e+00 -8.2620e+03 -2.7945e+04]]\n",
+            "\n",
+            "1000 loops, best of 5: 731 µs per loop\n"
           ]
         }
       ]
@@ -264,14 +270,14 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss}}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Mostrando matriz resultao do Método de Gauss}}$\n",
         "#@markdown > $\\color{gray}{\\text{resultado}}$\n",
         "\n",
         "def resultado(hea):\n",
         "    '''Entre apenas com uma matriz triangular inferior'''\n",
         "    import numpy as np\n",
         "    \n",
-        "    arr = np.array(hea, copy=True); mt = []\n",
+        "    arr = np.array(hea, dtype=np.float64, copy=True); mt = []\n",
         "    for x in reversed(range(len(arr))):\n",
         "        n = 0; s = []\n",
         "        for i, k in zip(range(x+1, len(arr)), range(1, len(arr))):\n",
@@ -282,31 +288,35 @@
         "\n",
         "    return mt"
       ],
-      "execution_count": 725,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "zeiJmNBSKGNB",
         "cellView": "form",
-        "outputId": "d5361610-50c2-40e0-c8ec-65a1e704f852"
+        "outputId": "1cd28ce1-0e2b-41d3-c21c-d2f66c607771"
       },
       "source": [
         "matriz_resultados =  matriz_triangulada#@param\n",
         "#@markdown > $\\color{gray}{\\text{resultado(matriz_resultados)}}$\n",
-        "print(f'\\033[32mM\\u1D40 = {resultado(matriz_resultados)}')"
+        "print(f'\\033[32mM\\u1D40 = {resultado(matriz_resultados)}'); print()\n",
+        "%timeit resultado(matriz_resultados)"
       ],
-      "execution_count": 726,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32mMᵀ = [-1.0, 0.0, 1.0, 2.0]\n"
+            "\u001b[32mMᵀ = [3.6176470588235285, -4.14705882352941, 5.823529411764706, 3.3823529411764706]\n",
+            "\n",
+            "10000 loops, best of 5: 17.5 µs per loop\n"
           ]
         }
       ]
@@ -333,8 +343,14 @@
         "def gauss_jordan(hea):\n",
         "\n",
         "    import numpy as np\n",
-        "    \n",
-        "    arr = np.array(hea, copy=True)\n",
+        "\n",
+        "    def simple(arr):\n",
+        "        diag = arr.diagonal()\n",
+        "        for i, x in zip(range(len(diag)), diag):\n",
+        "            arr[i] = arr[i]/x\n",
+        "        return arr\n",
+        "\n",
+        "    arr = np.array(hea, dtype=np.float64,  copy=True)\n",
         "\n",
         "    for _ in range(2): \n",
         "        bl = []\n",
@@ -355,42 +371,42 @@
         "                    v1, v2 = arr[cm][cm], arr[cm-k][cm]\n",
         "\n",
         "                arr[cm-k][c] = v1*arr[cm-k][c]-v2*arr[cm][c]\n",
-        "\n",
-        "    diag = arr.diagonal()\n",
-        "    for i, x in zip(range(len(diag)), diag):\n",
-        "        arr[i] = arr[i]/x\n",
-        "    \n",
+        "            simple(arr)\n",
         "    return arr"
       ],
-      "execution_count": 727,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
-        "outputId": "677ffa7c-8bf8-4033-ec69-2124ee472041"
+        "outputId": "bfcb9792-0a72-49e3-986e-0c9469999aea"
       },
       "source": [
-        "matriz_para_triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "matriz_para_triangular =  [[3, 2, 1, -1, 5], [0, 1, 0, 3, 6], [0, -3, -5, 7, 7], [0, 2, 4, 0, 15]]#@param\n",
         "#@markdown > $\\color{gray}{\\text{gauss_jordan(matriz_para_triangular)}}$\n",
         "arr = gauss_jordan(matriz_para_triangular)\n",
-        "print(f'\\033[32m{arr}')"
+        "print(f'\\033[32m{arr}'); print()\n",
+        "%timeit gauss_jordan(matriz_para_triangular)"
       ],
-      "execution_count": 729,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32m[[ 1  0  0  0 -1]\n",
-            " [ 0  1  0  0  0]\n",
-            " [ 0  0  1  0  1]\n",
-            " [ 0  0  0  1  2]]\n"
+            "\u001b[32m[[ 1.          0.          0.          0.          3.61764706]\n",
+            " [ 0.          1.          0.          0.         -4.14705882]\n",
+            " [-0.         -0.          1.         -0.          5.82352941]\n",
+            " [ 0.         -0.         -0.          1.          3.38235294]]\n",
+            "\n",
+            "1000 loops, best of 5: 949 µs per loop\n"
           ]
         }
       ]
@@ -413,7 +429,7 @@
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "4add065a-5a7c-48be-a197-034ec6ccb53e"
+        "outputId": "ca367325-7ca0-4ed7-9a9e-3bc37df219dc"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Contatos}}$\n",
@@ -455,7 +471,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 559,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
