--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "0okkjS6imtMS"
       ],
-      "authorship_tag": "ABX9TyPNZxh2deC5rByFrrSkbDp6",
+      "authorship_tag": "ABX9TyMP/pTxVN16Hq1ZzzegYHul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,8 +116,7 @@
       "metadata": {
         "id": "CKA5oT9it4a9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
         "outputId": "a3209da9-0b08-4bd1-fdff-775316b71657"
@@ -127,7 +126,7 @@
         "Numero_Binario =  10111#@param\n",
         "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,8 +142,7 @@
       "metadata": {
         "id": "yN69942r1Zds",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
         "outputId": "0fe97a9e-67de-4c84-ce28-b02eab27c875"
@@ -154,7 +152,7 @@
         "Numero_Decimal =  13.25#@param\n",
         "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,15 +215,14 @@
         "\n",
         "    return arr        "
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8ZSab6ZEJfKR",
         "cellView": "form",
@@ -238,7 +235,7 @@
         "print(f'\\033[32m{matriz_triangulada}'); print()\n",
         "%timeit eliminacao_gauss(matriz_para_triangular)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,15 +285,14 @@
         "\n",
         "    return mt"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "zeiJmNBSKGNB",
         "cellView": "form",
@@ -308,7 +304,7 @@
         "print(f'\\033[32mM\\u1D40 = {resultado(matriz_resultados)}'); print()\n",
         "%timeit resultado(matriz_resultados)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,15 +370,14 @@
         "            simple(arr)\n",
         "    return arr"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oD5DwgUj4zrq",
         "cellView": "form",
@@ -395,7 +390,7 @@
         "print(f'\\033[32m{arr}'); print()\n",
         "%timeit gauss_jordan(matriz_para_triangular)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,6 +410,319 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "7jr4NM4XqDGO"
+      },
+      "source": [
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "yaxfm3_s9Jw_"
+      },
+      "source": [
+        "#@markdown # $\\color{Turquoise}{\\text{Método de Jacobi}}$\n",
+        "#@markdown > $\\color{gray}{\\text{m_jacobi}}$\n",
+        "\n",
+        "def m_jacobi(hea):\n",
+        "\n",
+        "    import numpy as np\n",
+        "\n",
+        "    def v(arr, condi, line=0):\n",
+        "        n, rs = [arr[line][-1]], 0\n",
+        "        n.append(\n",
+        "            [x*i for x, i, c in zip(arr[line], condi, range(len(arr[0])))\n",
+        "            if c != line]\n",
+        "        )\n",
+        "        for k in n[1]:\n",
+        "            rs += k\n",
+        "        x = (n[0]-rs)/arr[line][line]\n",
+        "        return x\n",
+        "\n",
+        "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
+        "\n",
+        "    "
+      ],
+      "execution_count": 145,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fdXv8rv1-hh-"
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ICUBvDaN-wtu",
+        "outputId": "21ff54d6-e3a7-4cd5-cca3-762d12a27b8d"
+      },
+      "source": [
+        "arr = np.array([[10, 2, 1, 7], [1, 5, 1, -8], [2, 3, 10, 6]], dtype=np.float64)\n",
+        "ci = [1, 2, 3]\n",
+        "arr"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[10.,  2.,  1.,  7.],\n",
+              "       [ 1.,  5.,  1., -8.],\n",
+              "       [ 2.,  3., 10.,  6.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CyLpGfpxEEOD",
+        "outputId": "2712d18a-0924-4a0d-a0c6-a9522c0d01c0"
+      },
+      "source": [
+        "n = [arr[0][-1]]\n",
+        "n.append([x*i for x, i in zip(range(3), ci)])\n",
+        "n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[7.0, [0, 0, 0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jveh7M4_GdyO",
+        "outputId": "a4296fd0-e1d8-433c-d2c1-379a62b042bf"
+      },
+      "source": [
+        "[f'{x}*{i}' for x, i in zip(-1*arr[0], ci)]"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['-10.0*1', '-2.0*2', '-1.0*3']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-hurXSVp_JD_"
+      },
+      "source": [
+        "def v(arr, condi, line=0):\n",
+        "    n, rs = [arr[line][-1]], 0\n",
+        "    n.append(\n",
+        "        [x*i for x, i, c in zip(arr[line], condi, range(len(arr[0])))\n",
+        "        if c != line]\n",
+        "    )\n",
+        "    for k in n[1]:\n",
+        "        rs += k\n",
+        "    x = (n[0]-rs)/arr[line][line]\n",
+        "    return x"
+      ],
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XrTmB01aGCbd",
+        "outputId": "6c799fbd-b9a4-47ff-940e-94b7693ce0be"
+      },
+      "source": [
+        "nv = v(arr, ci, line=0); nv"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ahCvIa1GkXhe",
+        "outputId": "512ca408-352d-4fbb-95fb-e06ff40af21f"
+      },
+      "source": [
+        "nv = v(arr, ci, line=1); nv"
+      ],
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-2.4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 141
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bX3e2g75kcu2",
+        "outputId": "4c5263d5-6c10-4bc7-93de-1728ad484498"
+      },
+      "source": [
+        "nv = v(arr, ci, line=2); nv"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jdbdgUf5eZd_",
+        "outputId": "a2054a9b-1c02-4b55-a79e-d771e162e548"
+      },
+      "source": [
+        "for i in nv[1]:\n",
+        "    print(i)"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.0\n",
+            "6.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fUhkNfvzZo7d",
+        "outputId": "4115c4a8-0b6d-481a-e0b9-38c25e2fd0a9"
+      },
+      "source": [
+        "for i, k, l in zip(range(1, 4), range(i), range(2, 5)):\n",
+        "    print(i, k, l)"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 0 2\n",
+            "2 1 3\n",
+            "3 2 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "id": "W6kOSR29Q3B3",
+        "outputId": "d75a7a70-8368-4a9f-c5a7-ec9e65d1f0ec"
+      },
+      "source": [
+        "nv.remove(list(nv[1])[0])"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-92-134ce2e967d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lo7Qes7b9Ofa"
       },
       "source": [
         "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
@@ -471,7 +779,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
