--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "0okkjS6imtMS"
       ],
-      "authorship_tag": "ABX9TyMP/pTxVN16Hq1ZzzegYHul",
+      "authorship_tag": "ABX9TyP8UOcYdLnasHYkXJyFOW3a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,33 +418,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "yaxfm3_s9Jw_"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Método de Jacobi}}$\n",
         "#@markdown > $\\color{gray}{\\text{m_jacobi}}$\n",
         "\n",
-        "def m_jacobi(hea):\n",
+        "def m_jacobi(hea, ci=[[0, 0, 0]]):\n",
         "\n",
         "    import numpy as np\n",
         "\n",
-        "    def v(arr, condi, line=0):\n",
+        "    def v(arr, cond, line=0):\n",
+        "        '''\n",
+        "            Retorna uma matriz solução\n",
+        "        '''\n",
         "        n, rs = [arr[line][-1]], 0\n",
         "        n.append(\n",
-        "            [x*i for x, i, c in zip(arr[line], condi, range(len(arr[0])))\n",
+        "            [x*i for x, i, c in zip(arr[line], cond, range(len(arr[0])))\n",
         "            if c != line]\n",
         "        )\n",
         "        for k in n[1]:\n",
         "            rs += k\n",
         "        x = (n[0]-rs)/arr[line][line]\n",
+        "\n",
         "        return x\n",
         "\n",
         "    arr = np.array(hea, dtype=np.float64, copy=True)\n",
         "\n",
-        "    "
+        "    for j in range(3):\n",
+        "        ci.append([])\n",
+        "        for i in range(len(arr)):\n",
+        "            ci[j+1].append(v(arr, ci[j], line=i))\n",
+        "    print(ci)\n"
       ],
-      "execution_count": 145,
+      "execution_count": 277,
       "outputs": []
     },
     {
@@ -455,7 +462,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 4,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -465,14 +472,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ICUBvDaN-wtu",
-        "outputId": "21ff54d6-e3a7-4cd5-cca3-762d12a27b8d"
+        "outputId": "f8818ea0-1433-4dd1-bc58-0fe13dd4ddc4"
       },
       "source": [
         "arr = np.array([[10, 2, 1, 7], [1, 5, 1, -8], [2, 3, 10, 6]], dtype=np.float64)\n",
-        "ci = [1, 2, 3]\n",
+        "ci = [0, 0, 0]\n",
         "arr"
       ],
-      "execution_count": 36,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,61 +491,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CyLpGfpxEEOD",
-        "outputId": "2712d18a-0924-4a0d-a0c6-a9522c0d01c0"
-      },
-      "source": [
-        "n = [arr[0][-1]]\n",
-        "n.append([x*i for x, i in zip(range(3), ci)])\n",
-        "n"
-      ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[7.0, [0, 0, 0]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jveh7M4_GdyO",
-        "outputId": "a4296fd0-e1d8-433c-d2c1-379a62b042bf"
-      },
-      "source": [
-        "[f'{x}*{i}' for x, i in zip(-1*arr[0], ci)]"
-      ],
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['-10.0*1', '-2.0*2', '-1.0*3']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 49
+          "execution_count": 152
         }
       ]
     },
@@ -548,18 +501,22 @@
         "id": "-hurXSVp_JD_"
       },
       "source": [
-        "def v(arr, condi, line=0):\n",
+        "def v(arr, cond, line=0):\n",
+        "    '''\n",
+        "        Retorna uma matriz solução\n",
+        "    '''\n",
         "    n, rs = [arr[line][-1]], 0\n",
         "    n.append(\n",
-        "        [x*i for x, i, c in zip(arr[line], condi, range(len(arr[0])))\n",
+        "        [x*i for x, i, c in zip(arr[line], cond, range(len(arr[0])))\n",
         "        if c != line]\n",
         "    )\n",
         "    for k in n[1]:\n",
         "        rs += k\n",
         "    x = (n[0]-rs)/arr[line][line]\n",
+        "\n",
         "    return x"
       ],
-      "execution_count": 139,
+      "execution_count": 271,
       "outputs": []
     },
     {
@@ -568,75 +525,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XrTmB01aGCbd",
-        "outputId": "6c799fbd-b9a4-47ff-940e-94b7693ce0be"
-      },
-      "source": [
-        "nv = v(arr, ci, line=0); nv"
-      ],
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 140
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ahCvIa1GkXhe",
-        "outputId": "512ca408-352d-4fbb-95fb-e06ff40af21f"
-      },
-      "source": [
-        "nv = v(arr, ci, line=1); nv"
-      ],
-      "execution_count": 141,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-2.4"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 141
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "bX3e2g75kcu2",
-        "outputId": "4c5263d5-6c10-4bc7-93de-1728ad484498"
+        "outputId": "549b6bd8-b877-4dff-b4f9-d82f7ffbf109"
       },
       "source": [
         "nv = v(arr, ci, line=2); nv"
       ],
-      "execution_count": 142,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-0.2"
+              "0.6"
             ]
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 154
         }
       ]
     },
@@ -646,21 +551,54 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "jdbdgUf5eZd_",
-        "outputId": "a2054a9b-1c02-4b55-a79e-d771e162e548"
+        "id": "pH35FGuq3tT7",
+        "outputId": "9eb3b322-d7dc-4045-db9b-97be89cde43a"
       },
       "source": [
-        "for i in nv[1]:\n",
-        "    print(i)"
+        "c2 = [[1, 2, 3]]\n",
+        "c2.append([])\n",
+        "c2[1].append(2)\n",
+        "c2"
       ],
-      "execution_count": 128,
+      "execution_count": 265,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3], [2]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 265
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wce6xd246LyR",
+        "outputId": "335e7416-b4e8-4be8-f6b3-689a692578e1"
+      },
+      "source": [
+        "ci = [[0, 0, 0]]\n",
+        "\n",
+        "for j in range(3):\n",
+        "    ci.append([])\n",
+        "    for i in range(len(arr)):\n",
+        "        ci[j+1].append(v(arr, ci[j], line=i))\n",
+        "print(ci)"
+      ],
+      "execution_count": 275,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.0\n",
-            "6.0\n"
+            "[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98, 0.966]]\n"
           ]
         }
       ]
@@ -671,50 +609,72 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "fUhkNfvzZo7d",
-        "outputId": "4115c4a8-0b6d-481a-e0b9-38c25e2fd0a9"
+        "id": "GmrT7CuTmLbm",
+        "outputId": "135b418f-716a-457b-cd58-ba18f832c6d4"
       },
       "source": [
-        "for i, k, l in zip(range(1, 4), range(i), range(2, 5)):\n",
-        "    print(i, k, l)"
+        "ci = [[0, 0, 0]]\n",
+        "\n",
+        "for j in range(3):\n",
+        "    print(ci, '\\n'); ci.append([])\n",
+        "    for i in range(len(arr)):\n",
+        "\n",
+        "        line = i; n, rs = [arr[line][-1]], 0\n",
+        "        n.append(\n",
+        "            [x*i for x, i, c in zip(arr[line], ci[j], range(len(arr[0])))\n",
+        "            if c != line]\n",
+        "        )\n",
+        "        print(f'\\033[34m{n}\\033[')\n",
+        "        for k in n[1]:\n",
+        "            rs += k\n",
+        "        print(f'({n[0]}-\\033[32m{rs}\\033[)/{arr[line][line]} = {(n[0]-rs)/arr[line][line]}')\n",
+        "        ci[j+1].append((n[0]-rs)/arr[line][line])\n",
+        "        print(f'\\033[31m{ci}\\033[')\n",
+        "        \n",
+        "    print()"
       ],
-      "execution_count": 98,
+      "execution_count": 270,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 0 2\n",
-            "2 1 3\n",
-            "3 2 4\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "id": "W6kOSR29Q3B3",
-        "outputId": "d75a7a70-8368-4a9f-c5a7-ec9e65d1f0ec"
-      },
-      "source": [
-        "nv.remove(list(nv[1])[0])"
-      ],
-      "execution_count": 92,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-92-134ce2e967d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+            "[[0, 0, 0]] \n",
+            "\n",
+            "\u001b[34m[7.0, [0.0, 0.0]]\u001b[\n",
+            "(7.0-\u001b[32m0.0\u001b[)/10.0 = 0.7\n",
+            "\u001b[31m[[0, 0, 0], [0.7]]\u001b[\n",
+            "\u001b[34m[-8.0, [0.0, 0.0]]\u001b[\n",
+            "(-8.0-\u001b[32m0.0\u001b[)/5.0 = -1.6\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6]]\u001b[\n",
+            "\u001b[34m[6.0, [0.0, 0.0]]\u001b[\n",
+            "(6.0-\u001b[32m0.0\u001b[)/10.0 = 0.6\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6]]\u001b[\n",
+            "\n",
+            "[[0, 0, 0], [0.7, -1.6, 0.6]] \n",
+            "\n",
+            "\u001b[34m[7.0, [-3.2, 0.6]]\u001b[\n",
+            "(7.0-\u001b[32m-2.6\u001b[)/10.0 = 0.96\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96]]\u001b[\n",
+            "\u001b[34m[-8.0, [0.7, 0.6]]\u001b[\n",
+            "(-8.0-\u001b[32m1.2999999999999998\u001b[)/5.0 = -1.86\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86]]\u001b[\n",
+            "\u001b[34m[6.0, [1.4, -4.800000000000001]]\u001b[\n",
+            "(6.0-\u001b[32m-3.400000000000001\u001b[)/10.0 = 0.9400000000000001\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001]]\u001b[\n",
+            "\n",
+            "[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001]] \n",
+            "\n",
+            "\u001b[34m[7.0, [-3.72, 0.9400000000000001]]\u001b[\n",
+            "(7.0-\u001b[32m-2.7800000000000002\u001b[)/10.0 = 0.9780000000000001\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001]]\u001b[\n",
+            "\u001b[34m[-8.0, [0.96, 0.9400000000000001]]\u001b[\n",
+            "(-8.0-\u001b[32m1.9\u001b[)/5.0 = -1.98\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98]]\u001b[\n",
+            "\u001b[34m[6.0, [1.92, -5.58]]\u001b[\n",
+            "(6.0-\u001b[32m-3.66\u001b[)/10.0 = 0.966\n",
+            "\u001b[31m[[0, 0, 0], [0.7, -1.6, 0.6], [0.96, -1.86, 0.9400000000000001], [0.9780000000000001, -1.98, 0.966]]\u001b[\n",
+            "\n"
           ]
         }
       ]
